# chipiron

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  Dockerfile  Dockerfile.test  MANIFEST.in  Makefile  MakefileForTest.mk  Notes.md  PATH_MANAGEMENT.md  README.md  app.py  app.yaml  docker_run  main-chipiron.py  main_chipiron.py  main_chipiron_.py  morpion_dashboard_runner.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_light.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  main.yml  release.yml  test.yaml
chipiron/: .pylintrc  __init__.py  classify_states.py  convert_png_to_states.py  global_variables.py  learn_and_classify_nn.py  learn_nn.py  learn_opening_book.py  main-chipiron.py  my_random.py  one_game.py  one_match.py  py.typed  record_states.py  replay_game.py  settings.py  test.py  test2.py  test3.py  todo  tree_visualizer.py
chipiron/Players/: Human.py  Player.py  RandomPlayer.py  create_player.py
chipiron/chessenvironment/: __init__.py  chess_environment.py
chipiron/data/: data_store.py  replay_buffer.py  states2.data
chipiron/displays/: __init__.py  display_boards.py  display_one_game.py  gui.py  gui_protocol.py  gui_publisher.py  gui_replay_games.py
chipiron/environments/: __init__.py  deps.py  environment.py  starting_position.py  types.py
chipiron/extra_tools/: chi_nn.py  null_object.py  small_tools.py
chipiron/games/: __init__.py  game.py  game_manager.py  game_manager_factory.py  game_playing_status.py  match_factories.py  match_manager.py  match_results_factory.py  math_results.py  play_games.py  play_one_game.py  play_one_match.py
chipiron/league/: league.py
chipiron/learningprocesses/: __init__.py  tree_strap.py
chipiron/opening_book/: __init__.py  opening_book.py
chipiron/players/: Human.py  Player.py  RandomPlayer.py  __init__.py  chess_player_args.py  create_player.py  factory.py  factory_higher_level.py  factory_pipeline.py  game_player.py  human.py  move_selector.py  observer_wiring.py  oracle.py  oracles.py  player.py  player_args.py  player_handle.py  player_ids.py  player_thread.py  random_player.py  stockfish.py  test_creation.py  test_tree_value.py  utils.py
chipiron/runs/: .~lock.tournament1.ods#  tournament1.ods
chipiron/scripts/: README.md  __init__.py  chipiron_args.py  classify_states.py  default_script_args.py  factory.py  get_script.py  iscript.py  learn_and_classify_nn.py  learn_nn.py  learn_nn_from_states_and_explore.py  learn_nn_from_supervised_datasets.py  learn_nn_from_supervised_gameover_datasets.py  learn_nn_tree_strap_from_fixed_states.py  learn_opening_book.py  main_chipiron.py  main_chipiron2.py  main_chipiron_.py  one_game.py  one_match.py  record_states.py  record_states_eval_stockfish_1.py  replay_game.py  runtheleague.py  script.py  script_args.py  script_gui.py  script_gui_custom.py  script_type.py  tree_visualizer.py
chipiron/test/: one_match.py
chipiron/utils/: __init__.py  chi_nn.py  color.py  comparable.py  dataclass.py  dict_of_numbered_dict_with_pointer_on_max.py  is_dataclass.py  logger.py  my_random.py  my_sorted_dict.py  my_value_sorted_dict.py  null_object.py  observer_wrapper.py  path_variables.py  queue_protocols.py  small_tools.py
data/players/: Human.yaml  Uniform.yaml
data/puzzles/: mate_in_2_db.pickle  mate_in_2_db_small.pickle  matein2.txt  txt_to_struct.py
data/reference_games/: generate_reference_games.py
docs/: chipiron.displays.rst  chipiron.environments.chess.board.rst  chipiron.environments.chess.rst  chipiron.environments.chess_env.board.rst  chipiron.environments.chess_env.move.rst  chipiron.environments.chess_env.rst  chipiron.environments.rst  chipiron.games.game.rst  chipiron.games.match.rst  chipiron.games.rst  chipiron.league.rst  chipiron.learningprocesses.nn_trainer.rst  chipiron.learningprocesses.rst  chipiron.opening_book.rst  chipiron.players.boardevaluators.board_evaluation.rst  chipiron.players.boardevaluators.datasets.rst  chipiron.players.boardevaluators.neural_networks.input_converters.rst  chipiron.players.boardevaluators.neural_networks.models.rst  chipiron.players.boardevaluators.neural_networks.output_converters.rst  chipiron.players.boardevaluators.neural_networks.rst  chipiron.players.boardevaluators.rst  chipiron.players.boardevaluators.table_base.rst  chipiron.players.move_selector.rst  chipiron.players.move_selector.treevalue.indices.index_manager.rst  chipiron.players.move_selector.treevalue.indices.node_indices.rst  chipiron.players.move_selector.treevalue.indices.rst  chipiron.players.move_selector.treevalue.node_evaluator.neural_networks.rst  chipiron.players.move_selector.treevalue.node_evaluator.rst  chipiron.players.move_selector.treevalue.node_factory.rst  chipiron.players.move_selector.treevalue.node_selector.recurzipf.rst  chipiron.players.move_selector.treevalue.node_selector.rst  chipiron.players.move_selector.treevalue.node_selector.sequool.rst  chipiron.players.move_selector.treevalue.node_selector.uniform.rst  chipiron.players.move_selector.treevalue.nodes.algorithm_node.rst  chipiron.players.move_selector.treevalue.nodes.rst  chipiron.players.move_selector.treevalue.progress_monitor.rst  chipiron.players.move_selector.treevalue.recommender_rule.rst  chipiron.players.move_selector.treevalue.rst  chipiron.players.move_selector.treevalue.search_factory.rst  chipiron.players.move_selector.treevalue.tree_manager.rst  (+22 more)
flaskapp/: flask_app.py  test_flask_app.py
myapp/: app.py  forms.py
requirements/: base.txt  dev.txt  extra.txt  flask.txt  requirements_gcloud.txt
scripts/: __init__.py  classify_states.py  factory.py  launch_morpion_gnome_cluster.sh  launch_morpion_tmux_cluster.sh  learn_nn_tree_strap_from_fixed_states.py  learn_opening_book.py  main_chipiron_.py  one_game.py  record_states.py  record_states_eval_stockfish_1.py  replay_game.py  runtheleague.py  script.py  script_gui.py  script_gui_custom.py  tree_visualizer.py
src/: __init__.py
tests/: __init__.py  conftest.py  model_bundle_test_utils.py  test_path_consistency.py
(+1357 files in other folders)
