[build-system]
requires = ["setuptools>=80.10.2"]
build-backend = "setuptools.build_meta"


[project]
name = "chipiron"
version = "0.1.10"
description = "chipiron plays chess"
keywords = ["chess", "AI", "torch"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "PyYAML",
    "PySide6==6.9.2",
    "plotly>=6.3.0",
    "sortedcollections>=2.1.0",
    "pandas==2.3.2",
    "numpy==2.2.6",
    "numba>=0.61.2",
    "graphviz>=0.20.1",
    "dacite>=1.9.2",
    "customtkinter>=5.2",
    "pyarrow",
    "gprof2dot",
    "mlflow",
    "parsley_coco>=0.1.30",
    "gdown",
    "zstandard",
    "rich",
    "valanga>=0.1.14",
    "atomheart>=0.1.7  @ file:/home/pompote/oldata/victor/atomheart/",
    "algorhino-coral>=0.1.10",
    "algorhino-anemone>=0.1.11 @ file:/home/pompote/oldata/victor/anemone/",
]


license = "GPL-3.0-only"
license-files = ["LICENSE"]

readme = { file = "README.md", content-type = "text/markdown" }

authors = [
  { name = "Victor Gabillon", email = "victorgabillon@gmail.com" }
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.1",
  "coverage",
  "pytest-cov>=6.0.0",
]

lint = [
  "ruff>=0.15.0",
  "pylint>=4.0.4",
]

typecheck = [
  "mypy>=1.19.1",
  "pyright[nodejs]>=1.1.408",
  "types-PyYAML>=6.0.12.12",
]

dev = [
  "tox>=4.30.2",
  "black>=25.1.0",
  "build",
  "twine",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "pre-commit",
]

[project.urls]
Homepage = "https://github.com/victorgabillon/chipiron"
"Bug Tracker" = "https://github.com/victorgabillon/chipiron/issues"


[tool.setuptools]
include-package-data = true


[tool.setuptools.package-data]
chipiron = [
  "data/players/**/*.yaml",
  "data/players/**/*.pt",
  "data/settings/*.yaml",
  "data/starting_boards/*.text",
  "scripts/learn_nn_supervised/board_evaluators_common_training_data/**/*.yaml", # think about removing this for cleanliness at some point
  "scripts/learn_nn_supervised/board_evaluators_common_training_data/**/*.pt",
  "tests/data/trees/**/*.yaml",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chipiron", "chipiron.*"]
exclude = ["tests*", "docs", "examples", "build", "dist", "venv", "env", ".venv", ".env", "__pycache__", "*.egg-info"]



[tool.pytest.ini_options]
addopts = "--cov=chipiron"
testpaths = [
    "chipiron",
    "tests"
]

[tool.mypy]
mypy_path = "."
ignore_missing_imports = true
show_error_codes = true
warn_unreachable = true
no_implicit_reexport = true

# Disallow dynamic typing
#disallow_any_unimported = true
#disallow_any_expr = true
#disallow_any_decorated = true
#disallow_any_generics = true
#disallow_any_explicit = true
#disallow_subclassing_any = true

# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# Misc things
strict_equality = true

# Config file
warn_unused_configs = true



[[tool.mypy.overrides]]
module = [
    "PySide6",
]
ignore_missing_imports = true
follow_imports = 'skip'


[[tool.mypy.overrides]]
module = 'PySide6.*'
follow_imports = 'skip'
ignore_missing_imports = true


[tool.mypy-PySide6]
ignore_missing_imports = true


[tool.ruff]
line-length = 88
target-version = "py313"
fix =true

[tool.ruff.lint]
# Enable import sorting (alphabetical + group order)
select = ["I", "F", "E", "B", "TCH", "UP","SIM","RUF","RET","N","A",
"ANN", "PERF", "TRY","LOG","RSE","ICN","TID","Q","W",
"ISC","PIE","ERA","TD"
]  # I = imports, F = pyflakes, E = pycodestyle, TCH = type-checking, B = black

# Allow auto-fixing for imports and type-checking imports
fixable = ["I", "TCH", "F401","UP","SIM","RUF","RET","N","A","TRY","ANN","TID","PERF",
"PIE","TD","ISC","ERA"]

# Ignore rules you don't care about
ignore = ["E501","ANN401", "D101", "D103", "D417","TD003","TD002",]

# Optional: add your first-party package to extend the known group
[tool.ruff.lint.per-file-ignores]
# If needed, can add file-specific ignores



[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.pylint]
py-version = "3.13"
extension-pkg-whitelist = ["PyQt5", "PySide6"]

[tool.pylint.format]
max-line-length = 88

#[tool.pylint.messages_control]
disable = ["C0301"]

[tool.pylint.typecheck]
# Optional: same as init-hook in .pylintrc
init-hook = "import sys; sys.path.append('.')"


[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingImports = true
reportUnusedImport = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportPrivateImportUsage = false


#################### TOX ####################

[tool.tox]
min_version = "4.30.2"
env_list = ["py313", "lint", "typecheck"]
isolated_build = true

[tool.tox.env_run_base]
base_python = ["python3.13"]

# ----------------
# Tests (realistic)
# ----------------
[tool.tox.env.py313]
description = "Build + install package, run tests"
extras = ["test"]
changedir = "{envtmpdir}"
commands_pre = [
  ["python", "-c", "import shutil; shutil.rmtree(r'{toxinidir}/dist', ignore_errors=True)"],
  ["python", "-m", "build", "--sdist", "--wheel", "--outdir", "{toxinidir}/dist", "{toxinidir}"],
  ["python", "-c", "import shutil, os; src=os.path.join(r'{toxinidir}', 'tests'); dst='tests'; shutil.copytree(src, dst, dirs_exist_ok=True) if os.path.abspath(src) != os.path.abspath(dst) else print('Skipping self-copy')"],
  ["python", "-c", "import shutil; shutil.copytree(r'{toxinidir}/chipiron/scripts', 'chipiron/scripts', dirs_exist_ok=True)"],
  ["python", "-c", "import shutil, os; src=r'{toxinidir}/tests/data/trees'; dst='external_data/trees'; shutil.copytree(src, dst, dirs_exist_ok=True) if os.path.exists(src) else print(f'Skipping copy: {src} does not exist')"],
  ["python", "-c", "import os; print(os.listdir(r'{toxinidir}/dist'))"],
  ["python", "-c", "import glob, subprocess; subprocess.check_call(['pip','install', glob.glob(r'{toxinidir}/dist/*.tar.gz')[0]])"],
]
commands = [
  ["python", "-c", "import chipiron; print(chipiron.__file__)"],
  ["pytest", "--pyargs", "chipiron", "--basetemp={envtmpdir}/pytest-tmp",
   "--ignore=chipiron/scripts/script_gui/test/test_script_gui.py",
   "--ignore=chipiron/players/boardevaluators/table_base/test_syzygy.py",
   "{posargs}"],
]

# ----------------
# Lint (fast)
# ----------------
[tool.tox.env.lint]
description = "ruff + pylint (fast)"
package = "skip"
deps = [
  "ruff>=0.15.0",
  "pylint>=4.0.4",
  # optional: if pylint needs to import chipiron deps for module resolution
  # but usually it imports your code, so keep runtime deps available:
  "PyYAML",
  "PySide6==6.9.2",
  "plotly>=6.3.0",
  "sortedcollections>=2.1.0",
  "pandas==2.3.2",
  "numpy==2.2.6",
  "numba>=0.61.2",
  "graphviz>=0.20.1",
  "dacite>=1.9.2",
  "customtkinter>=5.2",
  "pyarrow",
  "gprof2dot",
  "mlflow",
  "parsley_coco>=0.1.30",
  "gdown",
  "zstandard",
  "rich",
    "valanga>=0.1.14",
    "atomheart>=0.1.7",
    "algorhino-coral>=0.1.10",
    "algorhino-anemone>=0.1.11 @ file:/home/juno/anemone",
]
set_env = { PYTHONPATH = "{toxinidir}" }
commands = [
  ["python", "-m", "ruff", "format", "--check", "chipiron"],
  ["python", "-m", "ruff", "check", "chipiron"],
  ["python", "-m", "pylint", "chipiron"],
]

# ----------------
# Typecheck (fast)
# ----------------
[tool.tox.env.typecheck]
description = "mypy + pyright (fast)"
package = "skip"
deps = [
  "mypy>=1.19.1",
  "pyright[nodejs]>=1.1.408",
  "types-PyYAML>=6.0.12.12",
  # runtime deps for import resolution (same list as lint)
  "PyYAML",
  "PySide6==6.9.2",
  "plotly>=6.3.0",
  "sortedcollections>=2.1.0",
  "pandas==2.3.2",
  "numpy==2.2.6",
  "numba>=0.61.2",
  "graphviz>=0.20.1",
  "dacite>=1.9.2",
  "customtkinter>=5.2",
  "pyarrow",
  "gprof2dot",
  "mlflow",
  "parsley_coco>=0.1.30",
  "gdown",
  "zstandard",
  "rich",
     "valanga>=0.1.14",
    "atomheart>=0.1.7",
    "algorhino-coral>=0.1.10",
    "algorhino-anemone>=0.1.11",
]
set_env = { MYPYPATH = "{toxinidir}" }
commands = [
  ["python", "-m", "mypy", "--strict", "chipiron"],
  ["python", "-m", "pyright", "chipiron"],
]

#################### END TOX ####################
