[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "chipiron"
version = "0.2.0"
description = "chipiron plays chess"
keywords = ["chess", "AI", "torch"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "PyYAML",
    "PySide6==6.9.2",
    "plotly>=6.3.0",
    "sortedcollections>=2.1.0",
    "pandas==2.3.2",
    "numpy==2.2.6",
    "numba>=0.61.2",
    "graphviz>=0.20.1",
    "dacite>=1.9.2",
    "customtkinter>=5.2",
    "pyarrow",
    "gprof2dot",
    "mlflow",
    "parsley_coco>=0.1.34",
    "gdown",
    "zstandard",
    "rich",
    "valanga>=0.2.0",
    "atomheart>=0.1.9",   
    "algorhino-coral>=0.1.11",
    "algorhino-anemone>=0.1.21",
    "torchinfo",
    "platformdirs>=4.9.2",
]


license = "GPL-3.0-only"
license-files = ["LICENSE"]

readme = { file = "README.md", content-type = "text/markdown" }

authors = [
  { name = "Victor Gabillon", email = "victorgabillon@gmail.com" }
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.2",
  "coverage",
  "pytest-cov>=6.0.0",
]

lint = [
  "ruff>=0.15.1",
  "pylint>=4.0.4",
]

typecheck = [
  "mypy>=1.19.1",
  "pyright[nodejs]>=1.1.408",
  "types-PyYAML>=6.0.12.12",
]

dev = [
  "tox>=4.30.2",
  "black>=25.1.0",
  "build",
  "twine",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "pre-commit",
]

[project.urls]
Homepage = "https://github.com/victorgabillon/chipiron"
"Bug Tracker" = "https://github.com/victorgabillon/chipiron/issues"


[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}


[tool.setuptools.package-data]
chipiron = [
  "data/players/**/*.yaml",
  "data/players/**/*.pt",
  "data/settings/*.yaml",
  "data/starting_boards/*.text",
  "scripts/learn_nn_supervised/board_evaluators_common_training_data/**/*.yaml", # think about removing this for cleanliness at some point
  "scripts/learn_nn_supervised/board_evaluators_common_training_data/**/*.pt",
  "tests/data/trees/**/*.yaml",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["chipiron", "chipiron.*"]
exclude = ["tests*", "docs", "examples", "build", "dist", "venv", "env", ".venv", ".env", "__pycache__", "*.egg-info"]



[tool.pytest.ini_options]
addopts = "--cov=chipiron"
testpaths = ["tests"]
norecursedirs = ["src"]
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
  "external_data: tests requiring external downloaded data",
]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
show_error_codes = true
warn_unreachable = true
no_implicit_reexport = true

# Disallow dynamic typing
#disallow_any_unimported = true
#disallow_any_expr = true
#disallow_any_decorated = true
#disallow_any_generics = true
#disallow_any_explicit = true
#disallow_subclassing_any = true

# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and optional handling
no_implicit_optional = true

# Configuring warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# Misc things
strict_equality = true

# Config file
warn_unused_configs = true



[[tool.mypy.overrides]]
module = [
    "PySide6",
]
ignore_missing_imports = true
follow_imports = 'skip'


[[tool.mypy.overrides]]
module = 'PySide6.*'
follow_imports = 'skip'
ignore_missing_imports = true


[tool.mypy-PySide6]
ignore_missing_imports = true


[tool.ruff]
line-length = 88
target-version = "py313"
fix =true

[tool.ruff.lint]
# Enable import sorting (alphabetical + group order)
select = ["I", "F", "E", "B", "TCH", "UP","SIM","RUF","RET","N","A",
"ANN", "PERF", "TRY","LOG","RSE","ICN","TID","Q","W","D",
"ISC","PIE","ERA","TD"
]  # I = imports, F = pyflakes, E = pycodestyle, TCH = type-checking, B = black

# Allow auto-fixing for imports and type-checking imports
fixable = ["I", "TCH", "F401","UP","SIM","RUF","RET","N","A","TRY","ANN","TID","PERF",
"PIE","TD","ISC","ERA"]

# Ignore rules you don't care about
ignore = ["E501","ANN401",
    "D203",  # incompatible with D211
    "D213",  # incompatible with D212
    "TD003","TD002",]

# Optional: add your first-party package to extend the known group
[tool.ruff.lint.per-file-ignores]
# If needed, can add file-specific ignores



[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.pylint]
py-version = "3.13"
extension-pkg-whitelist = ["PyQt5", "PySide6"]

[tool.pylint.format]
max-line-length = 88

#[tool.pylint.messages_control]
disable = ["C0301","W0511","R0903",    "unnecessary-ellipsis","R0902","R0913","R0912","R0915","R0917","R0911","R0914"]


[tool.pylint.typecheck]
# Optional: same as init-hook in .pylintrc
init-hook = "import sys; sys.path.append('.')"


[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingImports = true
reportUnusedImport = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportPrivateImportUsage = false


#################### TOX ####################

[tool.tox]
min_version = "4.30.2"
env_list = ["py313", "lint", "typecheck"]
isolated_build = true



[tool.tox.env_run_base]
base_python = ["python3.13"]

# ----------------
# Tests (realistic)
# ----------------
[tool.tox.env.py313]
deps = ["build"]
description = "Build + install package, run tests"
extras = ["test"]
changedir = "{toxinidir}"
commands_pre = [
  ["python", "-c", "import shutil; shutil.rmtree(r'{toxinidir}/dist', ignore_errors=True)"],
  ["python", "-m", "build", "--sdist", "--wheel", "--outdir", "{toxinidir}/dist", "{toxinidir}"],
  ["python", "-c", "import shutil, os; src=r'{toxinidir}/tests/data/trees'; dst='external_data/trees'; shutil.copytree(src, dst, dirs_exist_ok=True) if os.path.exists(src) else print(f'Skipping copy: {src} does not exist')"],
  ["python", "-c", "import os; print(os.listdir(r'{toxinidir}/dist'))"],
  ["python", "-c", "import glob, subprocess; subprocess.check_call(['pip','install', glob.glob(r'{toxinidir}/dist/*.tar.gz')[0]])"],
]
commands = [
  ["python", "-c", "import chipiron; print(chipiron.__file__)"],
  ["pytest",
   "--basetemp={envtmpdir}/pytest-tmp",
   "-m", "not integration and not external_data",
   "{posargs}"],
]

# ----------------
# Lint (fast)
# ----------------
[tool.tox.env.lint]
description = "ruff + pylint (fast)"
package = "skip"
deps = [
  "ruff>=0.15.1",
  "pylint>=4.0.4",
  # optional: if pylint needs to import chipiron deps for module resolution
  # but usually it imports your code, so keep runtime deps available:
  "PyYAML",
  "PySide6==6.9.2",
  "plotly>=6.3.0",
  "sortedcollections>=2.1.0",
  "pandas==2.3.2",
  "numpy==2.2.6",
  "numba>=0.61.2",
  "graphviz>=0.20.1",
  "dacite>=1.9.2",
  "customtkinter>=5.2",
  "pyarrow",
  "gprof2dot",
  "mlflow",
  "parsley_coco>=0.1.34",
  "gdown",
  "zstandard",
  "rich",
  "torchinfo",
  "platformdirs>=4.9.2",
    "valanga>=0.2.0",
    "atomheart>=0.1.9",   
    "algorhino-coral>=0.1.11",
    "algorhino-anemone>=0.1.21",
]
set_env = { PYTHONPATH = "{toxinidir}/src" }
commands = [
  ["python", "-m", "ruff", "format", "--check", "src/chipiron"],
  ["python", "-m", "ruff", "check", "src/chipiron"],
  ["python", "-m", "pylint", "src/chipiron"],
]

# ----------------
# Typecheck (fast)
# ----------------
[tool.tox.env.typecheck]
description = "mypy + pyright (fast)"
package = "skip"
deps = [
  "mypy>=1.19.1",
  "pyright[nodejs]>=1.1.408",
  "types-PyYAML>=6.0.12.12",
  # runtime deps for import resolution (same list as lint)
  "PyYAML",
  "PySide6==6.9.2",
  "plotly>=6.3.0",
  "sortedcollections>=2.1.0",
  "pandas==2.3.2",
  "numpy==2.2.6",
  "numba>=0.61.2",
  "graphviz>=0.20.1",
  "dacite>=1.9.2",
  "customtkinter>=5.2",
  "pyarrow",
  "gprof2dot",
  "mlflow",
  "parsley_coco>=0.1.34",
  "gdown",
    "torchinfo",
  "zstandard",
  "rich",
    "valanga>=0.2.0",
    "atomheart>=0.1.9",   
    "algorhino-coral>=0.1.11",
    "algorhino-anemone>=0.1.21",
      "pytest>=9.0.2",
  "pytest-cov>=6.0.0",
  "platformdirs>=4.9.2",
]
set_env = { MYPYPATH = "{toxinidir}/src" }
commands = [
  ["python", "-m", "mypy", "--strict", "src/chipiron"],
  ["python", "-m", "pyright", "src/chipiron"],
]

#################### END TOX ####################
