[metadata]
name = chipiron
version = 0.0.1
author = Victor Gabillon
author_email = victorgabillon@gmail.com
description = ai for chess
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/victorgabillon/chipiron
project_urls =
    Bug Tracker = https://github.com/victorgabillon/chipiron/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src