[metadata]
name = chipiron
description = chipiron plays chess
author = Victor Gabillon
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    chipiron

install_requires =
    PyYAML>=6.0
    PySide6>=6.6.1
    chess >= 1.10.0
    matplotlib>=3.8.2
    sortedcollections>=2.1.0
    pandas>=2.1.4
    numpy>=1.26.0
    bidict>=0.22.1
    numba>=0.59.0rc1
    graphviz>=0.20.1
    dacite >= 1.8.1
    customtkinter>=5.2

python_requires = >=3.11
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.0
    pytest-cov>=4.1
    mypy>=1.8
    flake8>=7.0
    tox>=4.13

[options.package_data]
chipiron = py.typed

[flake8]
max-line-length = 160