[metadata]
name = chipiron
description = chipiron plays chess
author = Victor Gabillon
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
packages =
    chipiron

install_requires =
    PyYAML>=6.0
    PySide6==6.6.2
    chess >= 1.10.0
    matplotlib>=3.8.2
    sortedcollections>=2.1.0
    pandas>=2.1.4
    numpy>=1.26.0
    numba>=0.59.0rc1
    graphviz>=0.20.1
    dacite >= 1.8.1
    customtkinter>=5.2
    torch>=2.2.1   # commented to make github action not have a memory overflow
                    # but needs to be uncommented for readthedocs compilation
    flask
    flask_cors
    gunicorn
    werkzeug
    bootstrap-flask
    gprof2dot

python_requires = >=3.12
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.1.1
    pytest-cov>=4.1
    mypy>=1.9
    flake8>=7.0
    tox>=4.14.2

[options.package_data]
chipiron = py.typed

[flake8]
max-line-length = 160

[isort]
profile=black
src_paths=isort,test

[pycodestyle]
max-line-length = 88
ignore = E203,E701

[pylint]
max-line-length = 88